--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "i18next": "1.5.12"
     },
     "engines": {
-        "node": "0.8.x",
-        "npm": "1.1.x"
+        "node": "0.8.3",
+        "npm": "1.1.33"
     }
 }
